package main

import (
	"context"

	aggrpb "github.com/Costin2000/GoChat---Schwarz-Internship---2025/services/aggregator/proto"
)

func (svc *AggregatorService) FetchUserFriends(ctx context.Context, req *aggrpb.FetchUserFriendsRequest) (*aggrpb.FetchUserFriendsResponse, error) {

	// unimplemented endpoint - TBD
	return nil, nil
}
